--- a/style.scss
+++ b/style.scss
@@ -27,6 +27,6 @@ License URI: http://www.gnu.org/licenses/gpl-2.0.html
 @import 'sass/print';
 
 /*!
- * Any extra CSS not in LESS can go here if you need it.
+ * Any extra CSS not in SASS can go here if you need it.
  * Put it below the comments.
  */
